--- a/src/Doc/Isar_Ref/document/root.tex
+++ b/src/Doc/Isar_Ref/document/root.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt,a4paper,fleqn]{report}
 \usepackage[T1]{fontenc}
 \usepackage{amssymb}
+\usepackage{wasysym}
 \usepackage{eurosym}
 \usepackage[english]{babel}
 \usepackage[only,bigsqcap]{stmaryrd}
