clarified keyword 'qualified' in accordance to a similar keyword from Haskell (despite unrelated Binding.qualified in Isabelle/ML);

--- a/NEWS
+++ b/NEWS
@@ -7,17 +7,18 @@ New in this Isabelle version
 *** General ***
 
 * Local theory specification commands may have a 'private' or
-'restricted' modifier to limit name space accesses to the local scope,
+'qualified' modifier to restrict name space accesses to the local scope,
 as provided by some "context begin ... end" block. For example:
 
   context
   begin
 
   private definition ...
-  private definition ...
   private lemma ...
 
-  lemma ...
+  qualified definition ...
+  qualified lemma ...
+
   lemma ...
   theorem ...
 
