--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 Isabelle NEWS -- history of user-relevant changes
 =================================================
 
+(Note: Isabelle/jEdit shows a tree-view of this file in Sidekick.)
+
+
 New in this Isabelle version
 ----------------------------
 
