--- a/NEWS
+++ b/NEWS
@@ -261,6 +261,10 @@ field_inverse_zero and linordered_field_inverse_zero. INCOMPATIBILITY.
 * Classes cancel_ab_semigroup_add / cancel_monoid_add specify explicit
 additive inverse operation. INCOMPATIBILITY.
 
+* Complex powers and square roots. The functions "ln" and "powr" are now
+  overloaded for types real and complex, and 0 powr y = 0 by definition.
+  INCOMPATIBILITY: type constraints may be necessary.
+
 * The functions "sin" and "cos" are now defined for any type of sort
 "{real_normed_algebra_1,banach}" type, so in particular on "real" and
 "complex" uniformly. Minor INCOMPATIBILITY: type constraints may be
