--- a/src/HOL/ex/document/root.tex
+++ b/src/HOL/ex/document/root.tex
@@ -4,6 +4,7 @@
 \usepackage[english]{babel}
 \usepackage{textcomp}
 \usepackage{amssymb}
+\usepackage{wasysym}
 \usepackage{pdfsetup}
 
 \urlstyle{rm}
