back to post-release mode -- after fork point;

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,10 @@ Isabelle NEWS -- history of user-relevant changes
 
 (Note: Isabelle/jEdit shows a tree-view of this file in Sidekick.)
 
+New in this Isabelle version
+----------------------------
+
+
 
 New in Isabelle2015 (May 2015)
 ------------------------------
