--- a/src/Doc/manual.bib
+++ b/src/Doc/manual.bib
@@ -332,11 +332,19 @@ publisher=PH,year=1998}
   author = "Jasmin Christian Blanchette and Tobias Nipkow",
   crossref = {itp2010}}
 
-@unpublished{blanchette-et-al-wit,
-  author = {J. C. Blanchette and A. Popescu and D. Traytel},
-  title = {Witnessing (Co)datatypes},
-  year = 2014,
-  note = {\url{http://www21.in.tum.de/~blanchet/wit.pdf}}}
+@inproceedings{blanchette-et-al-2015-wit,
+  author    = {Jasmin Christian Blanchette and
+               Andrei Popescu and
+               Dmitriy Traytel},
+  title     = {Witnessing (Co)datatypes},
+  booktitle = {{ESOP} 2015},
+  pages     = {359--382},
+  year      = {2015},
+  editor    = {Jan Vitek},
+  series    = {LNCS},
+  volume    = {9032},
+  publisher = {Springer}
+}
 
 @inproceedings{blanchette-et-al-2014-impl,
   author = "Jasmin Christian Blanchette and Johannes H{\"o}lzl
