--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,9 @@ Isabelle NEWS -- history of user-relevant changes
 New in this Isabelle version
 ----------------------------
 
+*** HOL ***
+
+* Discontinued simp_legacy_precond. Potential INCOMPATIBILITY.
 
 
 New in Isabelle2015 (May 2015)
