--- a/src/Doc/manual.bib
+++ b/src/Doc/manual.bib
@@ -1957,7 +1957,7 @@ publisher={Addison-Wesley},year=1999}
 @inproceedings{Wenzel:2013:ITP,
   author    = {Makarius Wenzel},
   title     = {Shared-Memory Multiprocessing for Interactive Theorem Proving},
-  booktitle = {Interactive Theorem Proving - 4th International Conference,
+  booktitle = {Interactive Theorem Proving --- 4th International Conference,
                ITP 2013, Rennes, France, July 22-26, 2013. Proceedings},
   editor    = {Sandrine Blazy and
                Christine Paulin-Mohring and
@@ -1989,7 +1989,7 @@ publisher={Addison-Wesley},year=1999}
   year = 2014,
   series = {EPTCS},
   month = {July},
-  note = {To appear, \url{http://eptcs.web.cse.unsw.edu.au/paper.cgi?UITP2014:11}}
+  note = {\url{http://eptcs.web.cse.unsw.edu.au/paper.cgi?UITP2014:11}}
 }
 
 @book{principia,
