--- a/NEWS
+++ b/NEWS
@@ -80,8 +80,8 @@ in the buffer.
 marker, SideKick parser.
 
 * Document antiquotation @{cite} provides formal markup, which is
-interpreted semi-formally based on .bib files that happen to be opened
-in the editor (hyperlinks, completion etc.).
+interpreted semi-formally based on .bib files that happen to be open in
+the editor (hyperlinks, completion etc.).
 
 * Less waste of vertical space via negative line spacing (see Global
 Options / Text Area).
