--- a/src/Doc/manual.bib
+++ b/src/Doc/manual.bib
@@ -1827,7 +1827,7 @@ publisher={Addison-Wesley},year=1999}
   note = {\url{http://www.spass-prover.org/publications/spass.pdf}}}
 
 @manual{isabelle-sys,
-  author	= {Markus Wenzel and Stefan Berghofer},
+  author	= {Makarius Wenzel and Stefan Berghofer},
   title		= {The {Isabelle} System Manual},
   institution	= {TU Munich},
   note          = {\url{http://isabelle.in.tum.de/doc/system.pdf}}}
