--- a/src/Doc/manual.bib
+++ b/src/Doc/manual.bib
@@ -1826,7 +1826,7 @@ publisher={Addison-Wesley},year=1999}
   title = "{SPASS} Version 3.5",
   note = {\url{http://www.spass-prover.org/publications/spass.pdf}}}
 
-@manual{isabelle-sys,
+@manual{isabelle-system,
   author	= {Makarius Wenzel and Stefan Berghofer},
   title		= {The {Isabelle} System Manual},
   institution	= {TU Munich},
