--- a/src/Doc/Isar_Ref/document/root.tex
+++ b/src/Doc/Isar_Ref/document/root.tex
@@ -59,7 +59,8 @@
 \maketitle 
 
 \pagenumbering{roman}
-{\def\isamarkupchapter#1{\chapter*{#1}}\input{Preface.tex}}
+\chapter*{Preface}
+\input{Preface.tex}
 \tableofcontents
 \clearfirst
 
