prefer lmodern, which produces scalable T1 fonts even with Debian-ized TeXLive;

--- a/src/Doc/Datatypes/document/root.tex
+++ b/src/Doc/Datatypes/document/root.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt,a4paper]{article} % fleqn
+\usepackage{lmodern}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
 \usepackage{cite}
