--- a/src/Doc/How_to_Prove_it/document/prelude.tex
+++ b/src/Doc/How_to_Prove_it/document/prelude.tex
@@ -5,6 +5,7 @@
 \usepackage[bottom]{footmisc}% places footnotes at page bottom
 \usepackage{alltt}
 
+\usepackage{lmodern}
 \usepackage[T1]{fontenc}
 
 \usepackage{isabelle,isabellesym}
