--- a/src/Doc/System/document/root.tex
+++ b/src/Doc/System/document/root.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt,a4paper]{report}
+\usepackage{lmodern}
 \usepackage[T1]{fontenc}
 \usepackage{supertabular}
 \usepackage{graphicx}
