--- a/src/Doc/Sledgehammer/document/root.tex
+++ b/src/Doc/Sledgehammer/document/root.tex
@@ -667,12 +667,11 @@ be enabled via the ``Auto Sledgehammer'' option under ``Plugins > Plugin Options
 > Isabelle > General.'' For automatic runs, only the first prover set using
 \textit{provers} (\S\ref{mode-of-operation}) is considered (typically E),
 \textit{slice} (\S\ref{mode-of-operation}) is disabled,
-\textit{minimize} (\S\ref{mode-of-operation}) is disabled, fewer facts are
+fewer facts are
 passed to the prover, \textit{fact\_filter} (\S\ref{relevance-filter}) is set to
 \textit{mepo}, \textit{strict} (\S\ref{problem-encoding}) is enabled,
 \textit{verbose} (\S\ref{output-format}) and \textit{debug}
-(\S\ref{output-format}) are disabled, \textit{preplay\_timeout}
-(\S\ref{timeouts}) is set to 0, and \textit{timeout} (\S\ref{timeouts}) is
+(\S\ref{output-format}) are disabled, and \textit{timeout} (\S\ref{timeouts}) is
 superseded by the ``Auto Time Limit'' option in jEdit. Sledgehammer's output is
 also more concise.
 
